Backend erweitert / Frontend 3.0